--- a/apps/tienda/templates/productos_listar.html
+++ b/apps/tienda/templates/productos_listar.html
@@ -19,10 +19,10 @@
                     </div>
                 </div>
                 <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
-                    <a class="btn btn-outline-danger" href="{% url 'index' %}">Filtrar</a>
+                    <a class="btn btn-outline-primary" href="{% url 'index' %}">Filtrar</a>
                 </div>
                 <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
-                    <a class="btn btn-outline-primary" href="{% url 'index' %}">Regresar</a>
+                    <a class="btn btn-outline-danger" href="{% url 'index' %}">Regresar</a>
                 </div>
             </div>
         </div>
