--- a/apps/tienda/templates/tienda_usuario_mostrar.html
+++ b/apps/tienda/templates/tienda_usuario_mostrar.html
@@ -3,48 +3,47 @@
 
 
 {% block content %}
-<div class="container" style="padding: 25px">
+<div class="container" style="padding: 25px 0">
     <div class="row">
         <div class="col-lg-3">
             <div class="row">
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.25s">
+                <div class="col-lg-12 mb-2 animated fadeInDown faster">
                     <h3 class="need-pd header-font-lp"><strong>Administración de <b>{{ nombre_tienda }}</b></strong></h3>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.5s">
+                <div class="col-lg-12 mb-2 animated fadeInDown fast">
                     <div class="list-group">
-                        <a class="list-group-item">Categorias</a>
+                        <a class="list-group-item"><strong>Categorias</strong></a>
                         {% for categoria in categorias %}
-                        <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>
+                        <a class="list-group-item"><label><input type="checkbox"></label><strong>{{ categoria }}</strong></a>
                         {% endfor %}
                     </div>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+                <div class="col-lg-12 mb-2 animated fadeInUp slow">
                     <a class="btn btn-outline-primary" href="{% url 'tienda:crear-producto' %}">Agregar Producto</a>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+                <div class="col-lg-12 mb-2 animated fadeInUp slow">
                     <a class="btn btn-outline-primary" href="{% url 'tienda:editar-tienda' tienda_id %}">Editar Perfil</a>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+                <div class="col-lg-12 mb-2 animated fadeInDown slow">
                     <a class="btn btn-outline-primary" href="{% url 'subasta:crear-subasta' %}">Subastar</a>
+                </div>
+                <div class="col-lg-12 mb-2 animated fadeInDown slow">
+                    <a class="btn btn-outline-danger" href="{% url 'index' %}">Regresar</a>
                 </div>
             </div>
         </div>
         <div class="col-lg-9">
             <div class="row">
                 {% for stock in user_stock_list %}
-                <div class="col-lg-4 mb-3 animated fadeInLeft" style="animation-delay: 1s">
+                <div class="col-lg-4 mb-3 animated fadeInLeft delay-1s">
                     <div class="card">
                         <div class="card-body">
                             <h6><strong>Producto: </strong>{{ stock.producto.nombre }}</h6>
                             <h6><strong>Precio  : </strong>{{ stock.producto.precio }}$</h6>
                             <h6><strong>Cantidad: </strong>{{ stock.cantidad }}</h6>
                             <div class="btn-group btn-group-sm">
-                                <button class="btn btn-secondary">
-                                    <a style="color: #f7f7f7;" href={% url 'tienda:editar-producto' stock.id %}>Editar</a>
-                                </button>
-                                <button class="btn btn-danger">
-                                    <a style="color: #f7f7f7" href={% url 'tienda:borrar-producto' stock.producto.id %}>Eliminar</a>
-                                </button>
+                                <a class="btn btn-outline-secondary" href={% url 'tienda:editar-producto' stock.id %}>Editar</a>
+                                <a class="btn btn-outline-danger" href={% url 'tienda:borrar-producto' stock.producto.id %}>Eliminar</a>
                             </div>
                         </div>
                         <div class="card-footer">
